<resources>
    <string name="app_name">View</string>
    <string name="title_reading">阅读</string>
    <string name="title_luck">福利</string>
    <string name="title_music">音乐</string>
    <string name="title_video">视频</string>
    <string name="zhihu">知乎</string>
    <string name="android">头条</string>
    <string name="ios">体育</string>
    <string name="front">娱乐</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="luck_fragment">luck_fragment</string>
    <string name="music_fragment">music_fragment</string>
    <string name="reading_fragment">reading_fragment</string>
    <string name="video_fragment">video_fragment</string>
    <string name="zhihu_fragment">zhihu_fragment</string>
    <string name="android_fragment">top_fragment</string>
    <string name="ios_fragment">tiyu_fragment</string>
    <string name="front_fragment">yule_fragment</string>
    <string name="joker_fragment">keji_fragment</string>
    <string name="joker">科技</string>

    <string name="title_activity_video_detail">VideoDetail</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
