<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_reading"
        android:icon="@drawable/reading"
        android:orderInCategory="0"
        android:title="@string/title_reading"/>

    <item
        android:id="@+id/navigation_luck"
        android:icon="@drawable/luck"
        android:orderInCategory="1"
        android:title="@string/title_luck"/>

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music"
        android:orderInCategory="2"
        android:title="@string/title_music"/>

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/video"
        android:orderInCategory="3"
        android:title="@string/title_video"/>
</menu>
